Move fixture editor scrollbar outwards #10

--- a/src/components/component-playground.less
+++ b/src/components/component-playground.less
@@ -181,13 +181,14 @@
       bottom: 0;
       left: 0;
       right: 50%;
-      padding: 10px;
       border: 1px solid rgba(16, 16, 16, 0.1);
       background: #f8f5ec;
 
       .fixture-editor {
         width: 100%;
         height: 100%;
+        padding: 10px;
+        box-sizing: border-box;
         border: none;
         background: transparent;
         color: #637c84;
